--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -81,39 +81,34 @@
     </item>
     <item row="1" column="1">
      <layout class="QGridLayout" name="gridLayout_2">
+      <item row="2" column="1">
+       <widget class="QComboBox" name="button_left"/>
+      </item>
+      <item row="2" column="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="8" column="1">
+       <widget class="QComboBox" name="gyro_left"/>
+      </item>
       <item row="4" column="3">
        <widget class="QLabel" name="label_10">
         <property name="text">
          <string>Joystick down:</string>
         </property>
        </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Joystick press:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="3">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>Joystick left:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="4">
-       <widget class="QComboBox" name="joystick_left"/>
-      </item>
-      <item row="5" column="4">
-       <widget class="QPushButton" name="apply">
-        <property name="text">
-         <string>apply</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QComboBox" name="button_down"/>
       </item>
       <item row="0" column="4">
        <widget class="QComboBox" name="joystic_mode">
@@ -144,50 +139,23 @@
         </item>
         <item>
          <property name="text">
-          <string>directinput joystick</string>
+          <string>directinput joystick 1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>directinput joystick 2</string>
          </property>
         </item>
        </widget>
       </item>
-      <item row="3" column="4">
-       <widget class="QComboBox" name="joystick_right"/>
+      <item row="7" column="1">
+       <widget class="QComboBox" name="gyro_up"/>
       </item>
-      <item row="1" column="4">
-       <widget class="QComboBox" name="joystick_up"/>
-      </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="button_up"/>
-      </item>
-      <item row="3" column="1">
-       <widget class="QComboBox" name="button_right"/>
-      </item>
-      <item row="2" column="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="3" column="3">
-       <widget class="QLabel" name="label_9">
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Joystick right:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>Joystick up:</string>
+         <string>Button right:</string>
         </property>
        </widget>
       </item>
@@ -198,29 +166,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="button_analogic"/>
-      </item>
-      <item row="4" column="4">
-       <widget class="QComboBox" name="joystick_down"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Button up:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Button right:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QComboBox" name="button_left"/>
-      </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
@@ -228,22 +173,21 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
-       <widget class="QLabel" name="label_6">
+      <item row="3" column="4">
+       <widget class="QComboBox" name="joystick_right"/>
+      </item>
+      <item row="1" column="3">
+       <widget class="QLabel" name="label_7">
         <property name="text">
-         <string>Joystick mode:</string>
+         <string>Joystick up:</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="label_11">
-        <property name="text">
-         <string>gyro:</string>
-        </property>
-       </widget>
+      <item row="3" column="1">
+       <widget class="QComboBox" name="button_right"/>
       </item>
-      <item row="5" column="1">
-       <widget class="QComboBox" name="gyro">
+      <item row="6" column="1">
+       <widget class="QComboBox" name="gyro_mode">
         <item>
          <property name="text">
           <string>unused</string>
@@ -252,6 +196,11 @@
         <item>
          <property name="text">
           <string>mouse movement</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>buttons</string>
          </property>
         </item>
         <item>
@@ -266,10 +215,132 @@
         </item>
         <item>
          <property name="text">
-          <string>directinput joystick</string>
+          <string>directinput joystick 1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>directinput joystick 2</string>
          </property>
         </item>
        </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="label_11">
+        <property name="text">
+         <string>gyro mode:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Joystick mode:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1">
+       <widget class="QComboBox" name="gyro_right"/>
+      </item>
+      <item row="2" column="4">
+       <widget class="QComboBox" name="joystick_left"/>
+      </item>
+      <item row="1" column="4">
+       <widget class="QComboBox" name="joystick_up"/>
+      </item>
+      <item row="7" column="0">
+       <widget class="QLabel" name="label_12">
+        <property name="text">
+         <string>gyro up:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="3">
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string>Joystick right:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="1">
+       <widget class="QComboBox" name="gyro_down"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Button up:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0">
+       <widget class="QLabel" name="label_15">
+        <property name="text">
+         <string>gyro down:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="4">
+       <widget class="QPushButton" name="apply">
+        <property name="text">
+         <string>apply</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Joystick press:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="4">
+       <widget class="QComboBox" name="joystick_down"/>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="button_up"/>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLabel" name="label_13">
+        <property name="text">
+         <string>gyro left:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="button_analogic"/>
+      </item>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="button_down"/>
+      </item>
+      <item row="9" column="0">
+       <widget class="QLabel" name="label_14">
+        <property name="text">
+         <string>gyro right:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>Joystick left:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </item>
